PyMaker/datas/object2/RawHTML/i8901/Python_DOC_referPages.comparing-elements-from-multiple-lists.txt
<div class="post-text" itemprop="text">
<p>I have 3 lists, and if say the player chose <code>'x'</code> on certain parts of the list it will print out <code>'Congrats X won!'</code> ... but somehow it says invalid syntax:</p>
<pre><code>    elif list1 [0] , list2 [0] ,list3[0] == 'x':
                   ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>If you want to test whether <a href="https://docs.python.org/3/library/functions.html#any" rel="nofollow noreferrer"><strong>any</strong></a> of the list elements equal <code>'x'</code>:</p>
<pre><code>elif any(s[0] == 'x' for s in (list1, list2, list3)):
</code></pre>
<p>If you want to test whether <a href="https://docs.python.org/3/library/functions.html#all" rel="nofollow noreferrer"><strong>all</strong></a> of the list elements equal <code>'x'</code>:</p>
<pre><code>elif all(s[0] == 'x' for s in (list1, list2, list3)):
</code></pre>
</div>
<span class="comment-copy">the correct syntax would be <code>elif list1[0] == 'x' or list2[0] == 'x' or list3[0] == 'x'</code>, more cleaner <code>elif 'x' in (list1[0], list2[0], list3[0])</code></span>
<span class="comment-copy">instead of or should be and I think :) @dnit13</span>
<span class="comment-copy">so in list will not work correct :)</span>
<span class="comment-copy">I managed to make 2 players take turn playing but it stops after the 2nd player entered her answer. I want to do the While loop however I seriously ran out of idea how to. I get it in my mind like I want the two players to keep playing until 3 position of 0s or Xs are filled but putting it in code I really need help.</span>
<span class="comment-copy">That doesn't really have anything to do with this question; you'll need to ask another one. To increase your chances of getting a helpful answer, please read <a href="http://stackoverflow.com/help/how-to-ask">How to ask</a>.</span>
